--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Order Momos, Tandoori, Rolls, Biryani & Chinese from Currchi – Serving Ramesh Nagar, Karol Bagh, Punjabi Bagh, Moti Nagar, Rajouri Garden & nearby Delhi areas. Call or WhatsApp now!">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
  </head>
 <body>
   <header id="top">
