--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
   </label>
 </div>
   </div>
+  <div class="toggle-filters">
+  <button id="veg-toggle" class="nav-btn">
+    🌿 Veg <span id="veg-clear" class="clear-x">✖</span>
+  </button>
+  <button id="nonveg-toggle" class="nav-btn">
+    🍖 Non-Veg <span id="nonveg-clear" class="clear-x">✖</span>
+  </button>
+</div>
 
   <!-- Floating Call Buttons -->
   <div class="floating-call-buttons" id="floatingCallButtons">
