--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="menu-item" data-name="🍖 Clear Soup" data-price="95"></div>
 </div>
 
-  <div class="menu-column" id="breads">
+  <div class="menu-section menu-column" data-category="Breads">
   <h2>🫓 Breads 🌿</h2>
   <img src="breads.jpg" class="section-image" alt="Currchi Breads">
   <div class="menu-header">
@@ -333,7 +333,7 @@
   <div class="menu-item" data-name="🍖 Mutton Biryani" data-half="395" data-full="675"></div>
 </div>
 
-    <div class="menu-column" id="raita-salad">
+    <div class="menu-section menu-column" data-category="raita-salad">
   <h2>🥗 Raita & Salad 🌿 </h2>
   <img src="salad.jpg" class="section-image" alt="Currchi Raita and Salad">
   <div class="menu-header">
