--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ function filterDishes(type) {
   showVegPlaceholdersIfEmpty();
 }
 
-// Show "Please select Veg items" if Non-Veg is selected and veg sections are empty
+// Show "Only Available in Veg" if Non-Veg is selected and veg sections are empty
 function showVegPlaceholdersIfEmpty() {
   document.querySelectorAll('.menu-section').forEach(section => {
     const heading = section.querySelector('h2')?.innerText || '';
@@ -850,7 +850,7 @@ function showVegPlaceholdersIfEmpty() {
     if (!placeholder) {
       placeholder = document.createElement('div');
       placeholder.className = 'veg-placeholder';
-      placeholder.innerHTML = `<em>Please select Veg items</em>`;
+      placeholder.innerHTML = `<em>Only Available in Veg</em>`;
       section.appendChild(placeholder);
     }
 
