--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div class="menu-item" data-name="🌿 Kashmiri Rajma Masala Combo" data-price="135"></div>
   <div class="menu-item" data-name="🌿 Pindi Channa Combo" data-price="135"></div>
   <div class="menu-item" data-name="🌿 Dal Makhani Combo" data-price="135"></div>
-  <div class="menu-item" data-name="🌿 Veg Manchurian + Fried Rice Combo" data-price="135"></div>
-  <div class="menu-item" data-name="🌿 Hakka Noodles + Manchurian Combo" data-price="135"></div>
+  <div class="menu-item" data-name="🌿 Veg Manchurian N Fried Rice Combo" data-price="135"></div>
+  <div class="menu-item" data-name="🌿 Hakka Noodles N Manchurian Combo" data-price="135"></div>
   <div class="menu-item" data-name="🌿 Palak Paneer Combo" data-price="145"></div>
   <div class="menu-item" data-name="🌿 Shahi Paneer Combo" data-price="145"></div>
   <div class="menu-item" data-name="🌿 Kadai Paneer Combo" data-price="145"></div>
@@ -182,13 +182,13 @@
 
   <!-- Veg -->
   <div class="menu-item" data-name="🌿 Chatpata Chilli Potato" data-half="95" data-full="125"></div>
-  <div class="menu-item" data-name="🌿 Honey & Chilli Potato" data-half="95" data-full="125"></div>
+  <div class="menu-item" data-name="🌿 Honey N Chilli Potato" data-half="95" data-full="125"></div>
   <div class="menu-item" data-name="🌿 Crunchy Veg Spring Roll" data-half="99" data-full="199"></div>
   <div class="menu-item" data-name="🌿 Crunchy Chilli Mushroom" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Chilli Paneer Dry" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Veg Dry Manchurian" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Crispy Corn" data-half="125" data-full="165"></div>
-  <div class="menu-item" data-name="🌿 Veg Salt & Pepper" data-half="125" data-full="165"></div>
+  <div class="menu-item" data-name="🌿 Veg Salt N Pepper" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Honey Chilli Mushroom" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Honey Chilli Paneer" data-half="125" data-full="165"></div>
   <div class="menu-item" data-name="🌿 Gobhi Manchurian" data-half="130" data-full="180"></div>
@@ -636,7 +636,7 @@ function updateCartDisplay() {
   message += `%0A🧾 Total: ₹${total}%0A%0APlease confirm the order.`;
 
   if (cartTotal) cartTotal.textContent = `Total: ₹${total}`;
-  if (whatsappLink) whatsappLink.href = `https://wa.me/919899427503?text=${encodeURIComponent(message)}`;
+  if (whatsappLink) whatsappLink.href = `https://wa.me/919899427503?text=(message)}`;
 
   // ✅ Show or hide cart panel
 if (Object.values(cart).some(qty => qty > 0)) {
