--- a/index.html
+++ b/index.html
@@ -878,27 +878,28 @@ function hideVegPlaceholders() {
 }
 </script>
 <script>
-  const searchInput = document.getElementById("searchInput");
+  // Updated search script to hide sections without matches and show matching items
+const searchInput = document.getElementById('searchInput');
 
-  searchInput.addEventListener("input", function () {
-    const query = this.value.toLowerCase();
-    const sections = document.querySelectorAll(".menu-section");
+searchInput.addEventListener('input', function () {
+  const filter = searchInput.value.toLowerCase();
+  const menuItems = document.querySelectorAll('.menu-item');
+  const menuSections = document.querySelectorAll('.menu-section');
 
-    sections.forEach((section) => {
-      const items = section.querySelectorAll(".menu-item");
-      let sectionHasMatch = false;
+  menuSections.forEach(section => {
+    let sectionHasMatch = false;
+    const items = section.querySelectorAll('.menu-item');
 
-      items.forEach((item) => {
-        const itemName = item.dataset.name?.toLowerCase() || "";
-        const match = itemName.includes(query);
-        item.style.display = match ? "" : "none";
-        if (match) sectionHasMatch = true;
-      });
-
-      // Hide entire section if no items match
-      section.style.display = sectionHasMatch ? "" : "none";
+    items.forEach(item => {
+      const name = item.dataset.name || '';
+      const match = name.toLowerCase().includes(filter);
+      item.style.display = match ? 'flex' : 'none';
+      if (match) sectionHasMatch = true;
     });
+
+    section.style.display = sectionHasMatch ? '' : 'none';
   });
+});
 </script>
 </body>
 </html>
